--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,8 +25,8 @@
     font-size: 37px; 
 }
 
-/* Mostrador de nivel de temperatura e clock*/
-#temperatura, #clock {
+/* Mostrador de nivel e média de temperatura e clock*/
+#temperatura, #clock, #temperaturaMedia, #clockMedia{
     font-size: 20px;
     margin: 5px;
     padding: 10px 15px;
