--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -66,6 +66,20 @@
     height: 50px; 
 }
 
+#process-table tbody {
+  display: block;
+  max-height: calc(8 * 2.5rem); 
+  overflow-y: auto;
+}
+#process-table thead, #process-table tbody tr {
+  display: table;
+  width: 100%;
+  table-layout: fixed; 
+}
+#process-table thead {
+  width: calc(100% - 1em);
+}
+
 
 
 
